tests/backend/checkmach/fail3.output
File "fail3.ml", line 2, characters 5-15:
Error (warning 197 [check-failed]): Annotation check for zero_alloc strict failed on function Fail3.test (camlFail3__test_HIDE_STAMP)
